fix cmd prompt issues and add new commands

--- a/src/routes/cmd/Request.scss
+++ b/src/routes/cmd/Request.scss
@@ -53,7 +53,7 @@
 
 .response {
    margin-left: 30px;
-   max-height: 300px;
+   max-height: 40rem;
    overflow-y: auto;
    overflow-x: hidden;
 }
